# syex

./: Dockerfile  app.py  pyproject.toml
.github/workflows/: dockerpublish.yml
