[tool.poetry]
name = "syex"
version = "0.2.0"
description = "Synology exported for prometheus"
authors = [
    "Erik Lilja <erikvlilja@gmail.com>",
    "Rovin Moser <mail@robinmoser.de>",
]
package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
prometheus_client = "^0.21.1"
py-synologydsm-api = "^2.6.3"

[build-system]
requires = ["poetry.core"]
build-backend = "poetry.core.masonry.api"
